# jj-plan

./: .gitignore  AGENTS.md  AGENTS.zh.md  CHANGELOG  CHANGELOG.dev.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh.md  deploy.md  deploy.zh.md  install.sh  llm-doc-style.md  llm-doc-style.zh.md  workflow.md
.github/workflows/: release.yml
cli/: Cargo.toml  build.rs  build.ts  package.json  tsconfig.json
cli/src/: jj-ask.ts  jj-plan.ts  jjask.ts  jjplan.ts  lib.rs  main.ts  shared.ts
scripts/: install-local.sh  install.sh
web/: next.config.mjs  package.json
web/app/: globals.css  layout.tsx
web/components/: AskEditDialog.tsx  AskSearch.tsx  AsksView.tsx  ChainGraph.tsx  ConfirmDialog.tsx  Dashboard.tsx  EditDialog.tsx  ProjectTabs.tsx  ProjectsList.tsx  RenameProjectDialog.tsx  SpecDetail.tsx  SpecsView.tsx  SplitPane.tsx  StatusBadge.tsx
web/lib/: api.ts  chain.ts  format.ts  types.ts  useScrollDirection.ts
worker/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/migrations/: 0001_init.sql  0002_drop_draft.sql  0003_add_asks.sql  0004_drop_ask_prev_id.sql
worker/src/: index.ts  ulid.ts
worker/test/: index.test.ts  setup.ts
